mengubah warna text navbar di humburger menjadi putih

--- a/css/style.css
+++ b/css/style.css
@@ -359,7 +359,7 @@ footer .credit a {
     }
 
     .navbar .navbar-nav a{
-        color: var(--bg);
+        color: #fff;
         display: block;
         margin: 1.5rem;
         padding: 0.5rem;
